Apply patch HARMONY-2473 ([classlib] [luni] Fixes for some minor issues in the java.net package found by Melody)
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/trunk@484825 13f79535-47bb-0310-9956-ffa450edef68